src/test/ui/resolve/token-error-correct.stderr
error: incorrect close delimiter: `}`
  --> $DIR/token-error-correct.rs:16:1
   |
LL |     foo(bar(;
   |            - unclosed delimiter
LL |     //~^ ERROR: expected expression, found `;`
LL | }
   | ^ incorrect close delimiter

error: expected expression, found `;`
  --> $DIR/token-error-correct.rs:14:13
   |
LL |     foo(bar(;
   |             ^ expected expression

error: aborting due to 2 previous errors

